# SentinelCore

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
agent/: Cargo.toml  build_output.txt  clippy.txt  errors.json  errors.txt  output.txt  tests_output.txt
agent/rules/: SC-001.yaml
agent/src/: main.rs  service.rs
agent/src/audit/: event_classifier.rs  hash_chain.rs  logger.rs  mod.rs  replay_engine.rs
agent/src/cloud/: attestation.rs  enroll.rs  identity.rs  kernel_comms.rs  mod.rs  protocol.rs  spool.rs  tls.rs  uploader.rs
agent/src/common/: mod.rs  normalized_event.rs
agent/src/detection/: model.rs
agent/src/engine/: context_signature.rs  contextual_engine.rs  event_window.rs  health.rs  integrity.rs  mod.rs  process_graph.rs  refined_detection.rs  rule.rs  signature.rs  watcher.rs
agent/src/engine/correlation/: eviction.rs  graph.rs  mod.rs  rules.rs  state.rs  window.rs
agent/src/engine/injection/: handle_state.rs  hollowing_detector.rs  mod.rs  process_memory_state.rs  remote_thread_detector.rs
agent/src/health/: exporter.rs  heartbeat.rs  metrics.rs  mod.rs  monitor.rs
agent/src/pipeline/: bus.rs  metrics.rs  mod.rs  monitor.rs  worker.rs
agent/src/sensor/: etw_correlation.rs  etw_listener.rs  etw_network.rs  kernel_telemetry.rs  mod.rs  raw_event.rs
agent/src/storage/: error.rs  hashchain.rs  mod.rs  sqlite_store.rs  verify.rs  writer_thread.rs
agent_node/: agent.py  central_client.py  ip_blocker.py  webshell_detector.py
deploy/: docker-compose.yml  generate_agent_cert.sh  hoangsec-agent.service  (+1 more)
(+31 files in other folders)
