[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
num_cpus = "1.16"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
notify = "6.1"
arc-swap = "1.6"
windows-service = "0.7"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.21"
flate2 = "1.0"
ureq = "2"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
]
